# mcv

./: CMakeLists.txt  LICENSE  README.md  libThirdParty.h  libThirdParty32.h  libThirdParty32Wrapper64.h  main.cpp  platform.h  sonar-project.properties
.github/workflows/: cmake.yml
